fix spacing

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -252,11 +252,11 @@ $txtsize: 16px;
 .stip-sectionTitle {
     padding: 0 25%;
     text-align: center;
-    margin-top: 100px;
+    margin-top: 12em;
 }
 
 .stip-sectionBody {
-    margin: 10px 10% 0 10%;
+    margin: 3em 10% 0 10%;
 }
 
 .stip-titleNum {
@@ -418,7 +418,6 @@ $txtsize: 16px;
  
     .stip-sectionTitle {
         padding: 0 5% !important;
-        margin-top: 100px !important;
     }
 
     .stip-sectionBody {
@@ -549,7 +548,7 @@ $txtsize: 16px;
 
     .stip-sectionTitle {
         padding: 0 10% !important;
-        margin-top: 100px !important;
+        margin-top: 10em !important;
     }
 
     .stip-sectionBody {
